K8s/microservices/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
    env: production
    version: v1.0
    tier: database
  annotations:
    maintainer: "Double Abdelrahman"
    description: "MySQL Service for Robot Shop Microservices"
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: mysql
